syntax = "proto3";

//protoc --go_out=plugins=grpc:. naturaeproto/Naturae.proto

option java_package = "com.examples.naturaeproto";
option go_package = "naturaeproto";

package naturaeproto;

service ServerRequests{
    rpc CreateAccount (CreateAccountRequest) returns(CreateAccountReply){}
    rpc Login (LoginRequest) returns(LoginReply){}
    rpc AccountAuthentication(AccountAuthenRequest) returns(AccountAuthenReply){}
    rpc GetNewAccessToken(GetAccessTokenRequest) returns (GetAccessTokenReply){}
    rpc SayHello (HelloRequest) returns (HelloReply){};
    rpc CreatePost (CreatePostRequest) returns (CreatePostReply){};
    rpc GetPosts (GetPostRequest) returns (GetPostReply){};
    rpc ForgetPassword (ForgetPasswordRequest) returns (ForgetPasswordReply){};
    rpc ForgetPasswordVerifyCode (ForgetPasswordVerifyCodeRequest) returns (ForgetPasswordVerifyCodeReply){};
    rpc ForgetPasswordResetPassword (ForgetPasswordNewPasswordRequest) returns (ForgetPasswordNewPasswordReply){};
    rpc ChangePassword (ChangePasswordRequest) returns (ChangePasswordReply){};
}

message HelloRequest{
    string name =1;
}

message HelloReply{
    string message = 1;
}

message CreateAccountRequest{
    string appKey = 1;
    string email = 2;
    string password = 3;
    string firstName = 4;
    string lastName = 5;
}

message CreateAccountReply {
    Status status = 3;
}

message LoginRequest {
    string appKey = 1;
    string email = 2;
    string password = 3;
}

message LoginReply {
    string accessToken = 1;
    string refreshToken = 2;
    string firstName = 3;
    string lastName = 4;
    string email = 5;
    Status status = 6;
}

message AccountAuthenRequest {
    string appKey = 1;
    string email = 4;
    string authenCode = 5;
}

message AccountAuthenReply {
    string accessToken = 1;
    string refreshToken = 2;
    string firstName = 3;
    string lastName = 4;
    string email = 5;
    Status status = 6;
}

message CreatePostRequest {
    string appKey = 1;
    string accessToken = 2;
    string title = 3;
    string species = 4;
    string description = 5;
    float lat = 6;
    float lng = 7;
    string encodedImage = 8;
}

message CreatePostReply {
    Status status = 1;
}

message GetPostReplyStruct{
    string title = 3;
    string species = 4;
    string description = 5;
    float lat = 6;
    float lng = 7;
    string encodedImage = 8;
}

message Status {
    int32 Code = 1;
    string Message = 2;
}

message GetPostRequest {
    string appKey = 1;
    float lat = 2;
    float lng = 3;
    int32 radius = 4;
}

message GetPostReply{
    Status status = 1;
    repeated GetPostReplyStruct reply = 2;
}

message GetPreviewRequest{

}

message GetPreviewReply{

}

message GetAccessTokenRequest{
    string appKey = 1;
    string refreshToken = 2;
}

message GetAccessTokenReply{
    string accessToken = 1;
    Status status = 2;
}

message ForgetPasswordRequest{
    string AppKey = 1;
    string email = 2;
}

message ForgetPasswordReply{
    Status status = 1;
}

message ForgetPasswordVerifyCodeRequest{
    string AppKey = 1;
    string Email = 2;
    string VerificationCode = 3;
}

message ForgetPasswordVerifyCodeReply{
    Status status = 1;
}

message ForgetPasswordNewPasswordRequest{
    string AppKey = 1;
    string Email = 2;
    string Password = 3;
}

message ForgetPasswordNewPasswordReply{
    Status status = 1;
}

message ChangePasswordRequest{
    string AppKey = 1;
    string AccessToken = 2;
    string CurrentPassword = 3;
    string NewPassword = 4;
}

message ChangePasswordReply{
    Status status = 1;
}
